# duckdb-finetype

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
.github/workflows/: MainDistributionPipeline.yml
models/char-cnn-v2/: config.yaml  labels.json  model.safetensors
models/tiered-v2/tier0/: model.safetensors
models/tiered-v2/tier1_BIGINT/: model.safetensors
models/tiered-v2/tier1_BOOLEAN/: model.safetensors
models/tiered-v2/tier1_DATE/: model.safetensors
models/tiered-v2/tier1_DOUBLE/: model.safetensors
models/tiered-v2/tier1_SMALLINT/: model.safetensors
models/tiered-v2/tier1_VARCHAR/: model.safetensors
models/tiered-v2/tier2_BIGINT_epoch/: model.safetensors
models/tiered-v2/tier2_BIGINT_numeric/: model.safetensors
models/tiered-v2/tier2_DATE_date/: model.safetensors
models/tiered-v2/tier2_DOUBLE_coordinate/: model.safetensors
models/tiered-v2/tier2_DOUBLE_numeric/: model.safetensors
models/tiered-v2/tier2_INET_internet/: model.safetensors
models/tiered-v2/tier2_JSON_object/: model.safetensors
models/tiered-v2/tier2_SMALLINT_internet/: model.safetensors
models/tiered-v2/tier2_TIMESTAMPTZ_timestamp/: model.safetensors
models/tiered-v2/tier2_TIMESTAMP_timestamp/: model.safetensors
models/tiered-v2/tier2_TIME_time/: model.safetensors
models/tiered-v2/tier2_VARCHAR_address/: model.safetensors
models/tiered-v2/tier2_VARCHAR_array/: model.safetensors
models/tiered-v2/tier2_VARCHAR_code/: model.safetensors
src/: lib.rs  normalize.rs  type_mapping.rs  unpack.rs
test/sql/: finetype.test
(+13 files in other folders)
