[package]
name = "finetype"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "DuckDB extension for semantic type classification powered by FineType"
repository = "https://github.com/meridian-online/duckdb-finetype"
homepage = "https://meridian.online/projects/finetype/"

[lib]
crate-type = ["cdylib"]

[features]
default = ["embed-models"]
embed-models = []

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "=1.10500.0", features = ["loadable-extension", "vscalar"] }
libduckdb-sys = { version = "=1.10500.0", features = ["loadable-extension"] }
finetype-core = "0.5.0"
finetype-model = "0.5.0"
serde_json = "1"
